force-app/main/default/objects/LoggerSettings__c/fields/DefaultLogOwner__c.field-meta.xml
<CustomField>
    <fullName>DefaultLogOwner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Specifies the default owner for new Logger__c records. This can be a user ID, a username, a queue ID, or a queue&apos;s developer name.</inlineHelpText>
    <label>Log Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>