force-app/main/default/objects/LoggerSettings__c/fields/DefaultNumberOfDaysToRetainLogs__c.field-meta.xml
<CustomField>
    <fullName>DefaultNumberOfDaysToRetainLogs__c</fullName>
    <defaultValue>14</defaultValue>
    <description
    >This value is used to set the field Logger__c.LogRetentionDate__c, which is then used by LogBatchPurger to delete old logs. To keep logs indefinitely, set this field to
        blank (null).</description>
    <inlineHelpText
    >This value is used to set the field Logger__c.LogRetentionDate__c, which is then used by LogBatchPurger to delete old logs. To keep logs indefinitely, set this field to
        blank (null).</inlineHelpText>
    <label>Days to Retain Logs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>