force-app/main/default/objects/LoggerSettings__c/fields/IsJavaScriptConsoleLoggingEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsJavaScriptConsoleLoggingEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText
    >When enabled, Logger will automatically call the browser&apos;s console.log() function when logging via lightning components. To help with performance, this option should
        be disabled in production unless you are actively troubleshooting an issue.</inlineHelpText>
    <label>Enable JavaScript console.log()</label>
    <type>Checkbox</type>
</CustomField>