force-app/main/default/objects/LoggerSettings__c/fields/LoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>LoggingLevel__c</fullName>
    <defaultValue>&apos;DEBUG&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Logging Level</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>